--- a/style.css
+++ b/style.css
@@ -3,38 +3,42 @@ body {
 	margin: 0;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 .container {
 	display: grid;
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-    margin-top: 5em;
-    row-gap: 20px;
+    margin-top: 3rem;
+    row-gap: 2rem;
 }
 
 .xo-icon {
-    width: 20px;
-    height: 20px;
+    width: 2rem;
+    height: 2rem;
 }
 
 .xo-icon-lg {
-    width: 40px;
-    height: 40px;
+    width: 3rem;
+    height: 3rem;
 }
 
 .game-title {
     display: grid;
     justify-content: center;
     color: #00CCFF;
-    font-size: 2.5em;
-    margin-bottom: 10px;
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
 }
 
 .game-player {
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
-    margin-bottom: -15px;
+    margin-bottom: -1.5rem;
 }
 
 .info {
@@ -42,14 +46,14 @@ body {
 	justify-content: center;
 	align-content: center;
 	grid-template-columns: 1fr 1fr;
-	column-gap: 20px;
+	column-gap: 2rem;
 }
 
 .turn {	
 	display: flex;
 	text-align: center;
-	padding-right: 10px;
-	padding-left: 10px;
+	padding-right: 1rem;
+	padding-left: 1rem;
 	border-radius: 5px;
 	border: 1px solid #00CCFF;
 	justify-content: space-between;
@@ -74,7 +78,7 @@ body {
     100% { color: #00CCFF;  } 
 } 
 .wrapper-status {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     font-weight: bold;
     animation: myFlicker 700ms infinite;
     width: 100%;
@@ -89,8 +93,8 @@ body {
 	justify-content: center;
 	align-content: center;	
 	background-color: #00CCFF;
-	width: 396px;
-	height: 396px;
+	width: 30rem;
+	height: 30rem;
 }
 
 .num {
@@ -109,21 +113,22 @@ body {
 .restart button {
     visibility: hidden;
     background-color: #00CCFF;
-    padding: 20px 20px;
-    border-radius: 5px;
+    padding: 2rem 2rem;
+    border-radius: .5rem;
+    margin-bottom: 1rem;
     border: none;
     color: #FFF;
     width: 100%;
-    font-size: 1.5em;
+    font-size: 1.5rem;
     cursor: pointer;
     animation: myFlicker 700ms infinite;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 60rem) {
 	.board {
-		height : 310px;
-		width: 310px;
-		font-size: 0.8em;	
+		height : 30rem;
+		width: 30rem;
+		font-size: 0.8rem;	
 	}
 	
 }
