--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+    --color-primary: #00CCFF;
+    --color-white: #FFF;
+  }
+
+
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	margin: 0;
@@ -12,8 +19,8 @@ html {
 	justify-content: center;
 	align-content: center;
 	align-items: center;
-    margin-top: 3rem;
-    row-gap: 2rem;
+    margin-top: 1rem;
+    row-gap: 1rem;
 }
 
 .xo-icon {
@@ -29,16 +36,14 @@ html {
 .game-title {
     display: grid;
     justify-content: center;
-    color: #00CCFF;
+    color: var(--color-primary);
     font-size: 2.5rem;
-    margin-bottom: 1rem;
 }
 
 .game-player {
     display: grid;
     grid-template-columns: 1fr 1fr;
     text-align: center;
-    margin-bottom: -1.5rem;
 }
 
 .info {
@@ -55,13 +60,13 @@ html {
 	padding-right: 1rem;
 	padding-left: 1rem;
 	border-radius: 5px;
-	border: 1px solid #00CCFF;
+	border: 1px solid var(--color-primary);
 	justify-content: space-between;
 	align-items: center;
 }
 
 #o {
-    background-color: #00CCFF;
+    background-color: var(--color-primary);
 }
 
 
@@ -73,9 +78,9 @@ html {
 /* Text Flicker */
 
 @keyframes myFlicker { 
-    0% { color: #00CCFF;  } 
-    50% { color: #fff;  }
-    100% { color: #00CCFF;  } 
+    0% { color: var(--color-primary);  } 
+    50% { color: var(--color-white);  }
+    100% { color: var(--color-primary);  } 
 } 
 .wrapper-status {
     font-size: 1.5rem;
@@ -92,17 +97,17 @@ html {
 	grid-auto-rows: 1fr 1fr 1fr;
 	justify-content: center;
 	align-content: center;	
-	background-color: #00CCFF;
-	width: 30rem;
-	height: 30rem;
+	background-color: var(--color-primary);
+	width: 27rem;
+	height: 27rem;
 }
 
 .num {
 	display: flex;
     justify-content: center;
     align-items: center;
-	border: 5px solid white;
-	color: white;
+	border: 5px solid var(--color-white);
+	color: var(--color-white);
     cursor: pointer;
 }
 
@@ -112,12 +117,11 @@ html {
 
 .restart button {
     visibility: hidden;
-    background-color: #00CCFF;
-    padding: 2rem 2rem;
-    border-radius: .5rem;
-    margin-bottom: 1rem;
+    background-color: var(--color-primary);
+    padding: 1rem 0;
+    border-radius: 5px;
     border: none;
-    color: #FFF;
+    color: var(--color-white);
     width: 100%;
     font-size: 1.5rem;
     cursor: pointer;
@@ -132,4 +136,44 @@ html {
 	}
 	
 }
+
+
+/* ADD MODE */
+
+select {
+    appearance: none;
+    outline: 0;
+    border: 0;
+    box-shadow: none;
+    flex: 1;
+    padding: 0 1rem;
+    color: var(--color-white);
+    background-color: var(--color-primary);
+    background-image: none;
+    cursor: pointer;
+  }
+
+  .mode {
+    position: relative;
+    display: flex;
+    height: 3rem;
+    border-radius: .25em;
+    overflow: hidden;
+  }
+  /* Arrow */
+  .mode::after {
+    content: '\25BC';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1em;
+    background-color: var(--color-primary);
+    transition: .25s all ease;
+    pointer-events: none;
+  }
+  /* Transition */
+  .mode:hover::after {
+    color: var(--color-white);
+  }
+  
 
